// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SizeAwareImage should load download and copy link buttons when an image is mounted 1`] = `
<Fragment>
  <div
    className="image-loading__container class"
    style={
      Object {
        "height": 200,
        "minHeight": 50,
        "minWidth": 50,
        "width": 300,
      }
    }
  >
    <svg
      style={
        Object {
          "maxHeight": 200,
          "maxWidth": 300,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 300 200"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    className="file-preview__button"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <figure
      className="image-loaded-container"
    >
      <img
        aria-label="file thumbnail photo-1533709752211-118fcaf03312"
        className="class"
        onClick={[Function]}
        onError={[Function]}
        onKeyDown={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.png"
        tabIndex={0}
      />
    </figure>
  </div>
</Fragment>
`;

exports[`components/SizeAwareImage should match snapshot when handleSmallImageContainer prop is passed 1`] = `
<Fragment>
  <div
    className="image-loading__container class"
    style={
      Object {
        "height": 200,
        "minHeight": 50,
        "minWidth": 50,
        "width": 300,
      }
    }
  >
    <svg
      style={
        Object {
          "maxHeight": 200,
          "maxWidth": 300,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 300 200"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    className="file-preview__button"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="small-image__container"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "maxHeight": 350,
          "maxWidth": "100%",
          "minHeight": 50,
          "minWidth": 50,
        }
      }
    >
      <figure
        className="image-loaded-container"
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
            "margin": 0,
            "width": "100%",
          }
        }
      >
        <img
          aria-label="file thumbnail photo-1533709752211-118fcaf03312"
          className="class small-image--inside-container"
          onClick={[Function]}
          onError={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          src="https://example.com/image.png"
          style={
            Object {
              "height": 200,
              "maxWidth": "100%",
              "width": 300,
            }
          }
          tabIndex={0}
        />
      </figure>
    </div>
  </div>
</Fragment>
`;

exports[`components/SizeAwareImage should render a placeholder and has loader when showLoader is true 1`] = `
<Fragment>
  <div
    className="image-loading__container class"
    style={
      Object {
        "height": 200,
        "minHeight": 50,
        "minWidth": 50,
        "width": 300,
      }
    }
  >
    <div
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
        }
      }
    >
      <LoadingImagePreview
        containerClass="file__image-loading"
      />
    </div>
    <svg
      style={
        Object {
          "maxHeight": 200,
          "maxWidth": 300,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 300 200"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    className="file-preview__button"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <figure
      className="image-loaded-container"
    >
      <img
        aria-label="file thumbnail photo-1533709752211-118fcaf03312"
        className="class"
        onClick={[Function]}
        onError={[Function]}
        onKeyDown={[Function]}
        onLoad={[Function]}
        src="https://example.com/image.png"
        style={
          Object {
            "height": 200,
            "maxWidth": "100%",
            "width": 300,
          }
        }
        tabIndex={0}
      />
    </figure>
  </div>
</Fragment>
`;
